Fixes verticall alignment due to new label styles

--- a/src/sass/components/_file-input.scss
+++ b/src/sass/components/_file-input.scss
@@ -13,6 +13,7 @@
     input[type="file"] + label {
         font-size: $ts-base;
         margin-top: 0;
+        margin-bottom: 0;
         font-weight: 700;
         cursor: pointer;
         flex-grow: 0;
